pushing new changes

--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,4 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>Pr01VerifyPages.verifyAboutUsPage()[pri:0, instance:pk09testnggroups.Pr01VerifyPages@6bedbc4d]<br/>Pr01VerifyPages.verifyHomePage()[pri:0, instance:pk09testnggroups.Pr01VerifyPages@6bedbc4d]<br/></td></tr>
-<tr><td>smoke</td><td>Pr01VerifyPages.verifyHomePage()[pri:0, instance:pk09testnggroups.Pr01VerifyPages@6bedbc4d]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
