--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,8 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7bace">  <td>22/11/06 00:54:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr01VerifyPages.verifyAboutUsPage()[pri:0, instance:pk09testnggroups.Pr01VerifyPages@6bedbc4d]">verifyAboutUsPage</td> 
-  <td>main@1813666644</td>   <td></td> </tr>
-<tr bgcolor="a7bace">  <td>22/11/06 00:54:21</td>   <td>3211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr01VerifyPages.verifyHomePage()[pri:0, instance:pk09testnggroups.Pr01VerifyPages@6bedbc4d]">verifyHomePage</td> 
-  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="aaa7c7">  <td>22/11/10 21:00:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr01VerifyPages.verifyFAQsPage()[pri:0, instance:pk08testng.Pr01VerifyPages@48974e45]">verifyFAQsPage</td> 
+  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="aaa7c7">  <td>22/11/10 21:00:13</td>   <td>-10671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr01VerifyPages.verifyAboutUsPage()[pri:0, instance:pk08testng.Pr01VerifyPages@48974e45]">verifyAboutUsPage</td> 
+  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="aaa7c7">  <td>22/11/10 21:00:26</td>   <td>2414</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr01VerifyPages.verifyHomePage()[pri:0, instance:pk08testng.Pr01VerifyPages@48974e45]">verifyHomePage</td> 
+  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="94d271">  <td>22/11/10 21:00:36</td>   <td>13145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr02NavigationBarCheckWithPOM.searchMaruthi()[pri:0, instance:pk08testng.Pr02NavigationBarCheckWithPOM@14555e0a]">searchMaruthi</td> 
+  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="c0f766">  <td>22/11/10 21:00:53</td>   <td>29428</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr03Login.loginUser3()[pri:0, instance:pk08testng.Pr03Login@4bb33f74]">loginUser3</td> 
+  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="aaa7c7">  <td>22/11/10 21:00:21</td>   <td>-2611</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr01VerifyPages.verifyContactUsPage()[pri:0, instance:pk08testng.Pr01VerifyPages@48974e45]">verifyContactUsPage</td> 
+  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="c0f766">  <td>22/11/10 21:00:49</td>   <td>25602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr03Login.loginUser2()[pri:0, instance:pk08testng.Pr03Login@4bb33f74]">loginUser2</td> 
+  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="94d271">  <td>22/11/10 21:00:28</td>   <td>4624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr02NavigationBarCheckWithPOM.checkNavigationBarLinks()[pri:0, instance:pk08testng.Pr02NavigationBarCheckWithPOM@14555e0a]">checkNavigationBarLinks</td> 
+  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="94d271">  <td>22/11/10 21:00:33</td>   <td>10129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr02NavigationBarCheckWithPOM.searchBMW()[pri:0, instance:pk08testng.Pr02NavigationBarCheckWithPOM@14555e0a]">searchBMW</td> 
+  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="c0f766">  <td>22/11/10 21:00:45</td>   <td>22008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr03Login.loginUser1()[pri:0, instance:pk08testng.Pr03Login@4bb33f74]">loginUser1</td> 
+  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="c0f766">  <td>22/11/10 21:00:56</td>   <td>33016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr03Login.loginUser4()[pri:0, instance:pk08testng.Pr03Login@4bb33f74]">loginUser4</td> 
+  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="aaa7c7">  <td>22/11/10 21:00:18</td>   <td>-5472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr01VerifyPages.verifyCarListingPage()[pri:0, instance:pk08testng.Pr01VerifyPages@48974e45]">verifyCarListingPage</td> 
+  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="94d271">  <td>22/11/10 21:00:39</td>   <td>16068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr02NavigationBarCheckWithPOM.searchNissan()[pri:0, instance:pk08testng.Pr02NavigationBarCheckWithPOM@14555e0a]">searchNissan</td> 
+  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="94d271">  <td>22/11/10 21:00:42</td>   <td>18992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr02NavigationBarCheckWithPOM.searchToyota()[pri:0, instance:pk08testng.Pr02NavigationBarCheckWithPOM@14555e0a]">searchToyota</td> 
+  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="94d271">  <td>22/11/10 21:00:31</td>   <td>7198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pr02NavigationBarCheckWithPOM.searchAudi()[pri:0, instance:pk08testng.Pr02NavigationBarCheckWithPOM@14555e0a]">searchAudi</td> 
+  <td>main@504053874</td>   <td></td> </tr>
 </table>
